Fix banner overflow

--- a/docs/website.scss
+++ b/docs/website.scss
@@ -799,6 +799,7 @@ div.shine {
   gap: 0.5rem 1rem;
   white-space: nowrap;
   flex-direction: column;
+  overflow: hidden;
 
   h3,
   small {
@@ -822,6 +823,7 @@ div.shine {
     display: block;
     opacity: 1;
     font-weight: 400;
+    white-space: normal;
   }
 
   .launch-shine {
